2002-12-01  Steven Tamm  <steventamm@mac.com>

	* unexmacosx.c (copy_twolevelhints, dump_it):  Now corrects the
	offset in two hints table to allow prebinding to be redone and
	allow the executable to be stripped.

2002-11-29  Dave Love  <fx@gnu.org>

	* fns.c (Frequire): Don't call LOADHIST_ATTACH if feature was
	already provided.

2002-11-29  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (start_display): Check more intelligently for
	whether the line is continued.
	(move_it_vertically_backward): Clear it->continuation_lines_width.

2002-11-28  Dave Love  <fx@gnu.org>

	* s/amdahl.h, s/unipl5-0.h, m/sgi3000.h, s/3700.h, s/alliant-2800.h:
	* s/alliant.h, s/altos.h: Deleted.  (Unused/empty.)

2002-11-27  Steven Tamm  <steventamm@mac.com>

	* fns.c (Frequire): Change nesting allowance from 2 to 3 to cause
	more descriptive error output from lread.c:Fload upon most require
	cycles during boostrapping.

2002-11-27  Jason Rumney  <jasonr@gnu.org>

	* fileio.c (Finsert_file_contents): Give a more appropriate error
	for files bigger than 2Gb when off_t is 32 bit.

	* dired.c (Ffile_attributes): Don't return negative file sizes for
	files bigger than 2Gb when off_t is 32 bit.

2002-11-27  Dave Love  <fx@gnu.org>

	* s/irix6-0.h (GC_SETJMP_WORKS, GC_MARK_STACK): Define.

	* systty.h: Don't conditionally define GETPGRP_NO_ARG.  Test
	GETPGRP_VOID instead.
	[BSD_TERMIOS]: Remove definitions (never used).

	* s/osf5-0.h (WAIT_USE_INT, SYS_SIGLIST_DECLARED, sys_siglist):
	Don't define.
	(GC_SETJMP_WORKS, GC_MARK_STACK): Define.

	* m/mips.h (WORDS_BIG_ENDIAN): Define conditionally.

2002-11-25  Jason Rumney  <jasonr@gnu.org>

	* w32.c (sys_write): Avoid non-blocking mode, which is not fully
	supported.

2002-11-25  Dave Love  <fx@gnu.org>

	* unexalpha.c (update_dynamic_symbols): Cast arg of fatal_unexec.

	* Makefile.in (TEMACS_LDFLAGS): Update last change.

2002-11-25  Andreas Schwab  <schwab@suse.de>

	* m/ia64.h: Restore `#ifndef NOT_C_CODE' deleted by last change.
